--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+nav {
+  height: 70px;
+  display: flex;
+  padding: 20px 36px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+
+.nav--logo {
+  max-width: 100px;
+}
+
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+}
+
+.hero--img {
+  max-width: 100%;
+  align-self: center;
+}
+
+.hero--header {
+  margin-bottom: 16px;
+  font-size: 4rem;
+}
+
+.hero--text {
+  font-size: 1.5rem;
+  max-width: 510px;
+}
+
+.card {
+  position: relative;
+  width: 200px;
+  font-size: 12px;
+  flex: 0 0 auto; /* ADD */
+  display: flex; /* ADD */
+  flex-direction: column;
+}
+
+.card__img-main {
+  border-radius: 10px;
+  max-width: 100%;
+  margin-bottom: 5px;
+}
+
+.card__flex {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.card__text-light {
+  color: #918e9b;
+  font-weight: 400;
+}
+.card__text-light2 {
+  font-weight: 400;
+}
+
+.card__description {
+  margin: 2px 0;
+}
+.cards-lists {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 90px;
+  overflow-x: auto;
+}
+.cards-lists::-webkit-scrollbar {
+  display: none;
+}
+.card__badge{
+  position: absolute;
+  top: 2%;
+  left: 4%;
+  background-color: white;
+  padding: 5px;
+  font-weight: 600;
+  border-radius: 3px;
 }
